--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-paper": "^5.12.5",
     "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/bottom-tabs": "^7.3.10",
 
     "prop-types": "^15.8.1"
   },
