--- a/package.json
+++ b/package.json
@@ -10,25 +10,28 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/drawer": "^7.3.9",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
+    "@reduxjs/toolkit": "^2.7.0",
     "expo": "~53.0.4",
     "expo-status-bar": "~2.2.3",
+    "prop-types": "^15.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.1",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-web": "^0.20.0",
-    "uuid": "^11.1.0",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^4.10.0",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
-
     "react-native-vector-icons": "^10.2.0",
-    "react-native-paper": "^5.12.5",
-    "@expo/vector-icons": "^14.0.4",
-    "@react-navigation/bottom-tabs": "^7.3.10",
-
-    "prop-types": "^15.8.1"
+    "react-native-web": "^0.20.0",
+    "react-redux": "^9.2.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
