--- a/lab3/package.json
+++ b/lab3/package.json
@@ -12,10 +12,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-native-community/viewpager": "5.0.11",
+    "@react-navigation/bottom-tabs": "^7.3.12",
+    "@react-navigation/core": "^7.9.1",
+    "@react-navigation/drawer": "^7.3.11",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.7",
-    "@react-navigation/stack":"^6.0.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.29",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/stack": "^6.0.11",
+    "@reduxjs/toolkit": "1.6.2",
     "expo": "~53.0.7",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
@@ -33,11 +38,15 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-paper": "^5.14.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "react-redux": "7.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
